Changed request.POST to request.POST or None as read on Stack overflow to solve the This Field is Required appearing before form was submitted

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -69,3 +69,10 @@ a {
 .contact-form {
     margin: 0 auto;
 }
+
+/* Booking Form  */
+
+.booking_form {
+    list-style-type: none;
+    color: red;
+}
